<resources>
    <string name="app_name">Pavesando App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_title">Benvenuti nel cuore dell\'arte e della visione di Cesare Pavese!</string>
    <string name="welcome_subtitle">Esplorate il nostro museo virtuale, dove le opere dell\'illustre scrittore prendono vita sotto il vostro sguardo curioso.</string>
    <string name="welcome_second_title">Cosa ti aspetta:</string>
    <string name="chapter_one_label">Capitolo 1</string>
    <string name="chapter_one_title">“Tra le pagine della vita di Cesare Pavese”</string>
    <string name="chapter_one_first_paragraph">La prima sala permette di immergersi tra le vicende umane e professionali di Cesare Pavese</string>
    <string name="chapter_one_first_paragraph_below_image">ripercorrendo le tappe della sua vita nei luoghi da lui attraversati.</string>
    <string name="chapter_one_second_paragraph">\t Una serie di postazioni lungo le pareti invita il visitatore a leggere tra le righe di alcune opere dello scrittore, per coglierne le riflessioni più intime.</string>
    <string name="chapter_one_third_paragraph">\t Qui, Tramite proiezioni e audio sarà possibile conoscere in maniera più approfondita alcune chicche e curiosità sulla vita dell’autore.</string>
    <string name="chapter_one_call_to_action">\t Dai un’occhiata a quello che ti aspetta: </string>
    <string name="chapter_two_label">Capitolo 2</string>
    <string name="chapter_two_title">“Tra le prime edizioni e gli affetti personali”</string>
    <string name="chapter_two_first_paragraph">Esplora l\'essenza letteraria di Cesare Pavese in una sala unica e avvolgente dove </string>
    <string name="chapter_two_first_paragraph_below_image">sono custodite le prime edizioni delle sue opere iconiche.</string>
    <string name="chapter_two_second_paragraph">L\'atmosfera accogliente, arricchita dalla luce soffusa, vi invita a immergervi nella storia tangibile dei primi passi di questo grande scrittore.</string>
    <string name="chapter_two_third_paragraph">\t Lasciatevi stupire dai preziosi manoscritti e appunti qui oggi conservati gelosamente. Non potete non approfittarne per ammirare i suoi oggetti personali: la pipa, la penna e i suoi immancabili occhiali.</string>
    <string name="chapter_two_call_to_action">\t Dai un’occhiata : </string>
    <string name="chapter_three_label">Capitolo 3</string>
    <string name="chapter_three_title">“Ricordando Pavese: La penna eterna dell\'Autore"</string>
    <string name="chapter_three_first_paragraph">L’ultima sala vi invita ad entrare in dialogo con l’opera e la poetica pavesiana, grazie a </string>
    <string name="chapter_three_first_paragraph_below_image">un nuovo allestimento multimediale interattivo.</string>
    <string name="chapter_three_second_paragraph">\t Qui è custodita la copia originale dei Dialoghi con Leucò su cui lo scrittore ha lasciato la sua ultima frase, prima di togliersi la vita.</string>
    <string name="chapter_three_call_to_action">\t Sei incuriosito? Vedere per credere:</string>
    <string name="credit_for_audio_label">(Pavese Festival 2021, La Luna e i falò di Alessandro Preziosi per la Regia di Tommaso Mattei)</string>
    <string name="desk_wallpaper">desk Wallpaper</string>
    <string name="quote_staircase">\"Leggendo tra le righe della vita di Cesare Pavese si giunge al secondo piano…\"</string>
    <string name="quote_before_chapter_one">\"Un paese ci vuole, non fosse che il gusto di andarsene via.\" \n \n(La luna e i falò)</string>
    <string name="quote_before_chapter_two">\"La letteratura è una difesa contro le offese della vita.\" \n \n(Il mestiere di vivere)</string>
    <string name="quote_before_chapter_three">\"Non si ricordano i giorni, si ricordano gli attimi.\" \n \n(Il mestiere di vivere)</string>
    <string name="chiesa">Chiesa dei SS. Giacomo e Cristoforo</string>
    <string name="chiesaDescrizione">La costruzione è datata tra la fine del XIII secolo e l\'inizio del XIV. La chiesa venne ampliata durante i secoli. nel 1926 l’edificio venne dismesso, sconsacrato e lasciato in stato di abbandono. Fu nel 1994 che il Comune decise di trasferire tra le mura della chiesa, acquistata dall’Amministrazione, il Centro Studi e la Biblioteca Civica, le cui sedi furono rese inagibili dall’alluvione. Oggi è la sede dell’Auditorium della Fondazione Cesare Pavese e ospita le mostre temporanee del Museo Pavesiano.</string>
    <string name="pavese_ospita_calvino">Pavese ospita Calvino</string>
    <string name="pavese_ospita_calvino2">7 settembre 2023 – 1 aprile 2024</string>
    <string name="mostraDescrizione">Una serie di inediti, originali e prime edizioni celebrano la letteratura italiana del ‘900 e in particolare il rapporto che univa Cesare Pavese e Italo Calvino, maestro e allievo nell’Einaudi del secondo Dopoguerra.</string>
    <string name="la_casa_di_pavese">La casa di Pavese</string>
    <string name="pavese_des_1">Benvenuti a Casa Pavese, casa dove nacque Cesare e deve crebbe insieme alla sua famiglia.</string>
    <string name="pavese_des_2">Un’ umile dimora di campagna con mobili all’antica e una raccolta di copie di manoscritti e opere d’arte e varie edizioni di libri sia in italiano sia in inglese. Non si tratta di una casa qualunque, bensì di una fonte d’ispirazione grazie ai paesaggi adiacenti per romanzi come “ La Luna e i falò”. Alle nostre spalle si erge La Collina della Gaminella e di fronte la Collina del Salto. Dalla casa Pavese notava il Moncucco che lo ispirò a scrivere la poesia “ I mari del sud”.</string>
    <string name="pavese_des_3">Rivivi la casa di Cesare Pavese dove il tempo pare essersi fermato nel 900.</string>
    <string name="la_casa_di_nuto">La casa di Nuto</string>
    <string name="casa_di_nuto_primo_paragrafo">Benritrovati presso la casa di Pinolo Scaglione, falegname, musicista e grande amico di Cesare Pavese.</string>
    <string name="casa_di_nuto_secondo_paragrafo">Pinolo e la casa ispirarono Pavese a scrivere il personaggio di Nuto nel romanzo “La luna e i falò “ e nella poesia “I fumatori di carta”</string>
    <string name="casa_di_nuto_terzo_paragrafo">Rivivi i ricordi di un’antica Santo Stefano Belbo scoprendo la casa di Nuto.</string>
    <string name="video_casa_botone_label">Premi qui per vedere la casa</string>


</resources>