<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.tour.map.NutoActivity"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.9">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/casanuto"
            android:scaleType="centerCrop"/>

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_back_24" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/la_casa_di_nuto"
                    android:fontFamily="@font/playfair_display_medium"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfair_display_medium"
                    android:layout_marginBottom="10dp"
                    android:text="@string/casa_di_nuto_primo_paragrafo"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfair_display_medium"
                    android:layout_marginBottom="10dp"
                    android:text="@string/casa_di_nuto_secondo_paragrafo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfair_display_medium"
                    android:layout_marginBottom="10dp"
                    android:text="@string/casa_di_nuto_terzo_paragrafo"/>

                <Button
                    android:id="@+id/videoButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfair_display_medium"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/green"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/video_casa_botone_label"/>


            </LinearLayout>


        </ScrollView>

    </LinearLayout>





</LinearLayout>