<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:background="@drawable/border_radius_shape"
    tools:context=".ui.home.tour.book.welcome.WelcomeFirstScreenFragment">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_second_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="10dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:padding="10dp"
        android:layout_below="@+id/welcomeTextView"/>
    <TextView
        android:id="@+id/firstRoomTextView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/chapter_one_title"
        android:textSize="12sp"
        android:layout_below="@+id/imageView"
        android:textAlignment="textStart"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:src="@mipmap/ic_launcher"
        android:layout_toEndOf="@+id/imageView"
        android:layout_below="@+id/welcomeTextView"/>
    <TextView
        android:id="@+id/secondRoomTextView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/chapter_two_title"
        android:textSize="12sp"
        android:layout_toEndOf="@+id/firstRoomTextView"
        android:layout_below="@+id/imageView2"
        android:textAlignment="textStart"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:src="@mipmap/ic_launcher"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_below="@+id/welcomeTextView"/>

    <TextView
        android:id="@+id/thirdRoomTextView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/secondRoomTextView"
        android:text="@string/chapter_three_title"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp" />


    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/thirdRoomTextView"
        android:layout_centerInParent="true"
        android:backgroundTint="#247E6B"
        android:text="Inizia" />

</RelativeLayout>