<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:layout_marginStart="25dp"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/chapterLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chapter_one_label"
            android:fontFamily="@font/playfair_display_medium"
            android:layout_gravity="center"
            android:textSize="12sp" />
        
        <TextView
            android:id="@+id/chapterTitleTextView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/chapter_one_title"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:fontFamily="@font/playfair_display_medium"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
        
        <RelativeLayout
            android:id="@+id/fistParagraphTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <ImageView
                android:id="@+id/roomImageView"
                android:layout_width="65dp"
                android:scaleType="fitXY"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_launcher_background"/>

            <TextView
                android:id="@+id/firstParagraphTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chapter_one_first_paragraph"
                android:fontFamily="@font/playfair_display_medium"
                android:textSize="12sp"
                android:paddingTop="0dp"
                android:layout_toEndOf="@+id/roomImageView"/>

            <TextView
                android:id="@+id/firstParagraphBelowImageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chapter_one_first_paragraph_below_image"
                android:textSize="12sp"
                android:fontFamily="@font/playfair_display_medium"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="03dp"
                android:layout_below="@+id/roomImageView"/>

            <LinearLayout
                 android:id="@+id/audioLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="#83EADBC9"
                android:gravity="center"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="22dp"
                 android:layout_below="@+id/firstParagraphBelowImageTextView">

                 <ImageButton
                     android:id="@+id/controlAudioButton"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:clickable="true"
                     android:background="#9FEADBC9"
                     android:contentDescription="@string/credit_for_audio_label"
                     android:src="@drawable/baseline_play_arrow_24"/>

                <com.chibde.visualizer.LineBarVisualizer
                    android:id="@+id/audioVisualizer"
                    android:visibility="gone"
                    android:layout_width="140dp"
                    android:layout_height="35dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/audioCreditLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:textStyle="italic"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="@font/playfair_display_regular"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_below="@+id/audioLayout"
                android:text="@string/credit_for_audio_label"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:paddingStart="02dp"
        android:paddingEnd="43dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/secondParagraphTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/playfair_display_medium"
            android:text="@string/chapter_one_second_paragraph" />
        <TextView
            android:id="@+id/thirdParagraphTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display_medium"
            android:textSize="12sp"
            android:paddingTop="02dp"
            android:text="@string/chapter_one_third_paragraph" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/chapter3ImageView"
                android:layout_width="80dp"
                android:scaleType="fitXY"
                android:layout_height="70dp"
                android:visibility="gone"
                android:background="@color/white"
                android:src="@drawable/ic_launcher_background"/>

            <ImageView
                android:id="@+id/chapter3ImageView2"
                android:layout_width="65dp"
                android:scaleType="fitXY"
                android:layout_height="70dp"
                android:visibility="gone"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:src="@drawable/ic_launcher_background"/>
        </LinearLayout>

        <TextView
            android:id="@+id/callToActionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/playfair_display_medium"
            android:paddingTop="02dp"
            android:text="@string/chapter_one_call_to_action" />


        <Button
            android:id="@+id/videoButton"
            android:layout_margin="05dp"
            android:text="Premi qui per vedere la sala in 360°"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="@font/playfair_display_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>