<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    tools:context=".ui.home.tour.ChiesaActivity"
    android:orientation="horizontal">

     <RelativeLayout
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:layout_weight="0.9">

          <ImageView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:src="@drawable/chiesauno"
              android:scaleType="centerInside" />

         <ImageButton
             android:id="@+id/backButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_margin = "15dp"
             android:background="@android:color/transparent"
             android:src="@drawable/baseline_arrow_back_24"
             app:tint="@color/black" />


     </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:orientation="vertical"
                android:layout_margin="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chiesa"
                    android:fontFamily="@font/playfair_display_medium"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp"/>

               <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfair_display_medium"
                    android:layout_marginBottom="20dp"
                    android:text="@string/chiesaDescrizione"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pavese_ospita_calvino"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/playfair_display_medium"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pavese_ospita_calvino2"
                    android:layout_gravity="center"
                    android:fontFamily="@font/playfair_display_medium"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfair_display_medium"
                    android:layout_marginBottom="20dp"
                    android:text="@string/mostraDescrizione"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/firstImageView"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/esposizioneuno"/>

                    <ImageView
                        android:id="@+id/secondImageView"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/esposzionedue"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/thirdImageView"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/esposzionetre"/>

                    <ImageView
                        android:id="@+id/fourImageView"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/esposzionequattro"/>
                </LinearLayout>


            </LinearLayout>


        </ScrollView>

    </LinearLayout>


</LinearLayout>